# flare-emissary

./: .env.example  .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  state.rs
crates/api/src/middleware/: auth.rs
crates/api/src/routes/: addresses.rs  auth.rs  health.rs  mod.rs  subscriptions.rs
crates/api/tests/: integration.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  db.rs  error.rs  lib.rs  redis_pool.rs  types.rs
crates/decoders/: Cargo.toml
crates/decoders/src/: decoder_tests.rs  fasset.rs  fdc.rs  ftso.rs  generic.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: analyzer.rs  cooldown.rs  cr_calculator.rs  hysteresis.rs  lib.rs  matcher.rs  processor.rs  subscription.rs
crates/engine/tests/: integration.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs  main.rs  poller.rs  registry.rs  reorg.rs
crates/indexer/tests/: integration.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
migrations/: 20250213000001_initial_schema.sql  20250227000001_ftso_price_ticks.sql
