[package]
name = "flare-api"
version.workspace = true
edition.workspace = true

[dependencies]
flare-common = { workspace = true }
flare-engine = { workspace = true }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
siwe.workspace = true
