[package]
name = "flare-engine"
version.workspace = true
edition.workspace = true

[dependencies]
flare-common = { workspace = true }
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
