[package]
name = "flare-indexer"
version.workspace = true
edition.workspace = true

[dependencies]
flare-common = { workspace = true }
flare-decoders = { workspace = true }
alloy.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
hex = "0.4"
