[package]
name = "flare-notifier"
version.workspace = true
edition.workspace = true

[dependencies]
flare-common = { workspace = true }
tokio.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
reqwest.workspace = true
